--- a/Authors
+++ b/Authors
@@ -2,5 +2,5 @@
 # For how it is generated, see `hack/generate-authors.sh`.
 
 nickygouws21@gmail.com
-hattysmiles@gmail.co0
+hattysmiles@gmail.com
 
